# unauthority-core

./: .commit_msg  .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  audit_clean_mainnet.sh  audit_tests.sh  audit_unwrap.py  build_dmg.sh  docker-compose.yml  genesis_config.json  install.sh  los.proto  start.sh  stop.sh  validator.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-flutter-validator.yml  release-flutter-wallet.yml
crates/los-cli/: Cargo.toml
crates/los-cli/src/: main.rs
crates/los-cli/src/commands/: common.rs  contract_ops.rs  dex.rs  mod.rs  query.rs  token.rs  tx.rs  validator.rs  wallet.rs
crates/los-consensus/: Cargo.toml
crates/los-consensus/benches/: bench_consensus.rs
crates/los-consensus/src/: abft.rs  checkpoint.rs  lib.rs  slashing.rs  voting.rs
crates/los-consensus/tests/: prop_consensus.rs
crates/los-contracts/: Cargo.toml
crates/los-contracts/src/: dex_amm.rs  lib.rs  usp01_token.rs
crates/los-core/: Cargo.toml
crates/los-core/benches/: bench_core.rs
crates/los-core/src/: bonding_curve.rs  distribution.rs  lib.rs  oracle_consensus.rs  pow_mint.rs  validator_config.rs  validator_rewards.rs
crates/los-core/tests/: prop_core.rs
crates/los-crypto/: Cargo.toml
crates/los-crypto/benches/: bench_crypto.rs
crates/los-crypto/src/: lib.rs
crates/los-crypto/tests/: prop_crypto.rs
crates/los-network/: Cargo.toml
crates/los-network/src/: fee_scaling.rs  lib.rs  p2p_encryption.rs  p2p_integration.rs  slashing_integration.rs  tor_transport.rs  validator_rewards.rs
crates/los-node/: Cargo.toml  build.rs
crates/los-node/src/: db.rs  faucet.rs.disabled  genesis.rs  grpc_server.rs  main.rs  mempool.rs  metrics.rs  oracle.rs.disabled  rate_limiter.rs  testnet_config.rs  tor_service.rs  validator_api.rs  validator_rewards.rs
crates/los-sdk/: Cargo.toml
crates/los-sdk/src/: lib.rs
crates/los-vm/: Cargo.toml
crates/los-vm/src/: dex_registry.rs  host.rs  lib.rs  main.rs  oracle_connector.rs  token_registry.rs  usp01.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  EXCHANGE_INTEGRATION.md  FLUTTER_VALIDATOR_GUIDE.md  GENESIS_TRANSPARENCY.md  MINING_GUIDE.md  SMART_CONTRACTS.md  TOR_SETUP.md  VALIDATOR_GUIDE.md  WHITEPAPER.md  WHY_UNAUTHORITY.md
examples/contracts/: Cargo.toml  dex_amm.rs  hello_world.rs  oracle_price_feed.rs  simple_storage.rs  token.rs
flutter_validator/: .clangd  README.md  pubspec.yaml
flutter_validator/assets/: network_config.json
flutter_validator/lib/: main.dart
flutter_validator/lib/constants/: blockchain.dart  colors.dart
flutter_validator/lib/models/: account.dart  network_tokens.dart  validator_earnings.dart
flutter_validator/lib/screens/: dashboard_screen.dart  node_control_screen.dart  setup_wizard_screen.dart
flutter_validator/lib/services/: api_service.dart  block_construction_service.dart  dilithium_service.dart  network_config.dart  network_preference_service.dart  network_status_service.dart  node_process_service.dart  peer_discovery_service.dart  tor_service.dart  wallet_service.dart
flutter_validator/lib/widgets/: earnings_chart.dart  earnings_tracker_card.dart  network_tokens_card.dart  uptime_card.dart  voting_power_card.dart
flutter_validator/linux/: CMakeLists.txt  com.unauthority.flutter_validator.desktop
flutter_validator/linux/runner/: my_application.cc
flutter_validator/macos/Runner/: Release.entitlements
flutter_validator/macos/Runner.xcodeproj/: project.pbxproj
flutter_validator/native/los_crypto_ffi/: Cargo.toml
flutter_validator/scripts/: build_native.sh
flutter_validator/test/: blockchain_constants_test.dart  network_tokens_test.dart  widget_test.dart
flutter_validator/web/: index.html  manifest.json
flutter_validator/windows/: CMakeLists.txt
flutter_validator/windows/runner/: Runner.rc  main.cpp
flutter_wallet/: .metadata  README.md  TOR_IMPLEMENTATION.md  pubspec.yaml  test_bundled_tor.sh
flutter_wallet/assets/: network_config.json
flutter_wallet/lib/: main.dart
flutter_wallet/lib/config/: testnet_config.dart
flutter_wallet/lib/constants/: blockchain.dart
flutter_wallet/lib/models/: account.dart  account_profile.dart  address_book_entry.dart  dex_pool.dart  token.dart
flutter_wallet/lib/screens/: account_management_screen.dart  address_book_screen.dart  burn_screen.dart  dex_screen.dart  dex_swap_screen.dart  explorer_screen.dart  history_screen.dart  home_screen.dart  network_info_screen.dart  receive_screen.dart  send_screen.dart  settings_screen.dart  token_detail_screen.dart  token_send_screen.dart  tokens_screen.dart  transaction_detail_screen.dart  wallet_setup_screen.dart
flutter_wallet/lib/services/: account_management_service.dart  address_book_service.dart  api_service.dart  block_construction_service.dart  dilithium_service.dart  (+6 more)
flutter_wallet/linux/: CMakeLists.txt  com.unauthority.flutter_wallet.desktop
flutter_wallet/native/los_crypto_ffi/: Cargo.toml
flutter_wallet/native/los_crypto_ffi/pqcrypto-internals-seeded/: Cargo.toml  build.rs
flutter_wallet/native/los_crypto_ffi/src/: lib.rs
flutter_wallet/scripts/: build_native.sh  build_release.sh  build_release_windows.ps1
flutter_wallet/test/: blockchain_constants_test.dart  dex_pool_model_test.dart  token_model_test.dart  widget_test.dart
flutter_wallet/web/: index.html  manifest.json
flutter_wallet/windows/: CMakeLists.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_abft_message.rs  fuzz_address_validation.rs  fuzz_block_deserialize.rs  fuzz_block_signing_hash.rs  fuzz_ledger_process_block.rs  fuzz_mining_hash.rs
genesis/: Cargo.toml  Cargo_test.toml  test_seed.rs
genesis/mainnet-genesis/: mainnet_public.json
genesis/src/: main.rs
genesis/testnet-genesis/: testnet_wallets.json
pqcrypto-internals-seeded/src/: lib.rs
testnet-genesis/: genesis_config.json  testnet_wallets.json
tests/: e2e_los_mainnet.rs  e2e_usp01_dex.rs  integration_test.rs  test_register_validator.rs  wallet_send_e2e.rs
tools/peer-directory/: README.md  index.html
(+19 files in other folders)
