[package]
name = "genesis"
version = "2.0.1"
edition = "2021" 

[dependencies]
rand = "0.8"
hex = "0.4"
sha3 = "0.10"
chrono = "0.4"
serde_json = "1.0"
bip39 = "2.0"
los-crypto = { path = "../crates/los-crypto" }

[[bin]]
name = "testnet_generator"
path = "src/bin/testnet_generator.rs"

[[bin]]
name = "mainnet_generator"
path = "src/bin/mainnet_generator.rs"