[package]
name = "los-core"
version = "2.1.0"
edition = "2021"

[features]
default = []
mainnet = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
toml = "0.8"
los-crypto = { path = "../los-crypto" }

[dev-dependencies]
tempfile = "3.8"