[package]
name = "los-crypto"
version = "2.2.0"
edition = "2021"

[dependencies]
# Wrapper Rust untuk implementasi referensi C Dilithium
pqcrypto-dilithium = "0.5" 
pqcrypto-traits = "0.3"
pqcrypto-internals = { version = "0.2", features = ["seeded"] }
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
age = "0.10"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = "1.7"
bs58 = "0.5"
blake2 = "0.10"
sha2 = "0.10"
digest = "0.10"
# TESTNET: Ed25519 fallback verification for Flutter desktop wallets
# (native Dilithium5 FFI not available on macOS)
ed25519-dalek = { version = "2", features = ["alloc"] }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_crypto"
harness = false

[features]
mainnet = []