[package]
name = "los-node"
version = "1.0.13"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
base64 = "0.22"
hex = "0.4"
warp = "0.3"
bytes = "1"
toml = "0.8"
sha3 = "0.10"
los-core = { path = "../los-core" }
los-crypto = { path = "../los-crypto" }
los-consensus = { path = "../los-consensus" }
los-network = { path = "../los-network" }
los-vm = { path = "../los-vm" }

# gRPC dependencies (NEW)
tonic = "0.12"
prost = "0.13"
chrono = "0.4"
sled = "0.34.7"
prometheus = { version = "0.14.0", features = ["process"] }
rand = "0.8"  # For faucet rate limiting
zeroize = "1.7"  # FIX C12-03: Zeroize secret key clones in async tasks
bip39 = "2.0"  # BIP39 mnemonic → seed for deterministic validator keypairs

[target.'cfg(unix)'.dependencies]
libc = "0.2"  # Non-blocking flock() to prevent UE zombie cascade

[features]
default = []
mainnet = ["los-core/mainnet", "los-crypto/mainnet", "los-vm/mainnet", "los-consensus/mainnet", "los-network/mainnet"]

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.8"
